@@ -1,3 +1,15 @@
+2007-11-29  Chris Rivera  <crivera@novell.com>
+
+	* src/cups-autoconfig.c:
+
+	Don't use the absolute path in the hal callout
+	script.
+
+	Move the fdi file to the thirdparty directory
+	from the osvendor directory.
+
+	Patches from Danny Kukawka.
+
 2007-11-14  Chris Rivera  <crivera@novell.com>
 
 	* src/cups-autoconfig.c:
